Legger til valget ANMODNING_OM_UNNTAK_HOVEDREGEL for EU_EOS + Unntak når man plukker sak.